change theme name

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: Rehub Theme Child
-Theme URL: https://themeforest.net/item/rehub-directory-multi-vendor-shop-coupon-affiliate-theme/7646339
-Description: Rehub Child Theme
+Theme Name: Elessi Theme Child
+Theme URL: http://elessi.nasatheme.com
+Description: Elessi Child Theme
 Author: Tanel
-Author URL: https://themeforest.net/item/rehub-directory-multi-vendor-shop-coupon-affiliate-theme/7646339
-Template: rehub-theme
+Author URL: http://elessi.nasatheme.com
+Template: elessi-theme
 Version: 1.0.0
-Text Domain: rehub-theme-child
+Text Domain: elessi-theme-child
 */ Custom CSS goes after this line
